# magic_ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COURSE_GENERATION_STRATEGY.md  DEPLOY.md  DEPLOYMENT_SUCCESS.txt  DEPLOY_CHECKLIST.md  Dockerfile  GITHUB_READY.txt  GIT_SETUP.md  MIGRATION_GUIDE.md  Makefile  PAYMENT_INTEGRATION_SUMMARY.md  PROJECT_CONTEXT.md  QUEST_FLOW.md  QUEST_V2_CHANGELOG.md  QUICK_START.md  README.md  README_DEPLOY.txt  SERVER_SETUP.md  SSL_SETUP.md  TELEGRAM_BOT_SETUP.md  TELEGRAM_OAUTH_SETUP.md  YOOKASSA_SETUP.md  create_test_user.py  create_test_user_with_course.py  deploy.sh  docker-compose.yml  generate_course.py  init_course_system.py  init_quick_test.py  main.py  migrate_to_postgres.py  pyproject.toml  quick-deploy.sh  requirements.txt  reset_postgres.sh  setup-ssl.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: __init__.py  config.py  database.py
app/data/: __init__.py  catalog.py  courses.py  quest_v2.py
app/middleware/: session.py
app/models/: __init__.py  course_module.py  email_verification.py  lesson.py  login_attempt.py  payment.py  user.py  user_course.py  user_lesson_progress.py
app/routes/: __init__.py  auth.py  courses.py  payments.py  public.py  quest.py
app/schemas/: __init__.py  auth.py  course.py
app/services/: __init__.py  course_generator.py  courses.py  email.py  openrouter.py  yookassa.py
app/utils/: rate_limit.py
nginx/: nginx.conf
static/: manifest.json
templates/: about.html  base.html  course.html  index.html  profile.html  terms.html
tests/: test_smoke.py
(+29 files in other folders)
